tests/data/midterm/midterm/2018241/Q6/submission_1/.vocStudentSubmissionReport.txt

[Executed at: Wed Mar 14 1:53:39 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24782_4/asnlib/submission.py", line 8, in <module>
    from q6_work import find_path
  File "./q6_work.py", line 10
    lineStationsMapped(line) = linesAndStations
           ^
SyntaxError: can't assign to function call
Command exited with non-zero status 1
